Fix content overflowing fixed position nav bar

--- a/src/pages/UserPageLayout/UserPageLayout.css
+++ b/src/pages/UserPageLayout/UserPageLayout.css
@@ -35,6 +35,5 @@
     .userPageContainer {
         padding: 0px;
         display: block;
-        height: calc(100dvh - var(--navbar-high-small));
     }
 }
